<resources>
    <string name="app_name">FitGuide</string>
    <string name="no_text_logo">Main no text logo.</string>
    <string name="login_title">INICIAR SESIÓN</string>
    <string name="email_hint">example@hint.com</string>
    <string name="email_label">Email</string>
    <string name="add_friend_input_hint">sampleUsername</string>
    <string name="add_friend_title">AGREGAR AMIGO</string>
    <string name="add_friend_input_label">USERNAME</string>
    <string name="add_contacts_btext">AGREGAR AMIGOS DESDE MIS CONTACTOS</string>
    <string name="friends_request_title">SOLICITUDES DE AMISTAD</string>
    <string name="friends_list_title">LISTA DE AMIGOS</string>
    <string name="contacts_title">AGREGAR AMIGO</string>
    <string name="contacts_description">SELECCIONA LOS AMIGOS QUE DESAS AGREGAR Y LUEGO EL BOTÓN DE AGREGAR</string>
    <string name="contacts_button_text">AGREGAR</string>
    <string name="gem_emoji">NIVEL: &#128142;</string>
    <string name="fire_emoji">&#128293;</string>
    <string name="add_fiends_btext">AGREGAR</string>
    <string name="sample_add_friend_name">User name</string>
    <string name="sample_add_friend_name_2">Nicolás Camacho Plazas</string>
    <string name="sample_add_friend_username">User nickname</string>
    <string name="sample_add_friend_username_2">NICOBOIIII</string>
    <string name="friend_requests_button_label">SOLICITUDES DE AMISTAD</string>
    <string name="add_friend_button_label">AGREGAR AMIGO</string>
    <string name="title_activity_running_maps">Map</string>
    <string name="title_activity_follow">Map</string>

</resources>