<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsListActivity">

    <include layout="@layout/custom_gradient_layout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_titles"
            app:layout_constraintTop_toButtonOf="@+id/button_titles">

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Button" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Button" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="146dp"
            android:layout_height="117dp"
            android:layout_marginTop="8dp"
            android:contentDescription="Work to be icon"
            app:layout_constraintBottom_toTopOf="@id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/w2b" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="256dp"
            android:layout_height="92dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/friends_list_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <LinearLayout
            android:id="@+id/button_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto"
                android:text="@string/friend_requests_button_label"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto"
                android:text="@string/add_friend_button_label"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/friendsScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="48dp"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLayout"
            app:layout_constraintVertical_bias="0.110000014">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout style="@style/Widget.App.AddFriendSnippet">

                    <LinearLayout style="@style/Widget.App.AddFriendInfo">

                        <TextView
                            android:id="@+id/add_friend_option_name"
                            style="@style/Widget.App.NameText"
                            android:text="@string/sample_add_friend_name" />

                        <TextView
                            android:id="@+id/add_friend_option_username"
                            style="@style/Widget.App.UsernameText"
                            android:text="@string/sample_add_friend_username" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView6"
                        style="@style/Widget.App.OddIcon"
                        app:srcCompat="@drawable/delete_icon" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:menu="@menu/bottom_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>